closes #201 fix logo link on mobile

--- a/themes/beaver/assets/css/navigation.css
+++ b/themes/beaver/assets/css/navigation.css
@@ -315,10 +315,12 @@
     z-index: -1;
     opacity: 0;
     transition: .3s;
+    display: none;
   }
 
   .navigation.-open:before {
     opacity: 1;
+    display: block;
   }
 
   .navigation.-open .list {
